; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_niu.c_niu_full_shutdown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_niu.c_niu_full_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.niu = type { i32, i32, i32 }
%struct.net_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.niu*, %struct.net_device*)* @niu_full_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @niu_full_shutdown(%struct.niu* %0, %struct.net_device* %1) #0 {
  %3 = alloca %struct.niu*, align 8
  %4 = alloca %struct.net_device*, align 8
  store %struct.niu* %0, %struct.niu** %3, align 8
  store %struct.net_device* %1, %struct.net_device** %4, align 8
  %5 = load %struct.niu*, %struct.niu** %3, align 8
  %6 = getelementptr inbounds %struct.niu, %struct.niu* %5, i32 0, i32 2
  %7 = call i32 @cancel_work_sync(i32* %6)
  %8 = load %struct.niu*, %struct.niu** %3, align 8
  %9 = call i32 @niu_disable_napi(%struct.niu* %8)
  %10 = load %struct.net_device*, %struct.net_device** %4, align 8
  %11 = call i32 @netif_tx_stop_all_queues(%struct.net_device* %10)
  %12 = load %struct.niu*, %struct.niu** %3, align 8
  %13 = getelementptr inbounds %struct.niu, %struct.niu* %12, i32 0, i32 1
  %14 = call i32 @del_timer_sync(i32* %13)
  %15 = load %struct.niu*, %struct.niu** %3, align 8
  %16 = getelementptr inbounds %struct.niu, %struct.niu* %15, i32 0, i32 0
  %17 = call i32 @spin_lock_irq(i32* %16)
  %18 = load %struct.niu*, %struct.niu** %3, align 8
  %19 = call i32 @niu_stop_hw(%struct.niu* %18)
  %20 = load %struct.niu*, %struct.niu** %3, align 8
  %21 = getelementptr inbounds %struct.niu, %struct.niu* %20, i32 0, i32 0
  %22 = call i32 @spin_unlock_irq(i32* %21)
  ret void
}

declare dso_local i32 @cancel_work_sync(i32*) #1

declare dso_local i32 @niu_disable_napi(%struct.niu*) #1

declare dso_local i32 @netif_tx_stop_all_queues(%struct.net_device*) #1

declare dso_local i32 @del_timer_sync(i32*) #1

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @niu_stop_hw(%struct.niu*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
